WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235953
MediaRecorderPrivate should not need to create IOSurfaces
https://bugs.webkit.org/show_bug.cgi?id=235953
Summary
MediaRecorderPrivate should not need to create IOSurfaces
youenn fablet
Reported
2022-02-01 08:01:23 PST
MediaRecorderPrivate should not need to create IOSurfaces
Attachments
Patch
(12.97 KB, patch)
2022-02-01 08:39 PST
,
youenn fablet
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(13.61 KB, patch)
2022-02-02 06:04 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(13.56 KB, patch)
2022-02-03 01:41 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2022-02-01 08:39:14 PST
Created
attachment 450532
[details]
Patch
youenn fablet
Comment 2
2022-02-02 06:04:12 PST
Created
attachment 450641
[details]
Patch
Eric Carlson
Comment 3
2022-02-02 08:56:11 PST
Comment on
attachment 450641
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=450641&action=review
> Source/WebKit/ChangeLog:13 > * WebProcess/cocoa/UserMediaCaptureManager.cpp: > > +2022-02-01 Youenn Fablet <
youenn@apple.com
>
This doesn't look right
> Source/WebKit/GPUProcess/webrtc/RemoteMediaRecorder.cpp:95 > + if (!pixelBuffer) > + return;
Is it worth logging an error message?
> Source/WebKit/WebProcess/GPU/webrtc/MediaRecorderPrivate.cpp:110 > + if (!copySharedVideoFrame(remoteSample->imageBuffer())) > + return;
Ditto
youenn fablet
Comment 4
2022-02-03 01:39:40 PST
(In reply to Eric Carlson from
comment #3
)
> Comment on
attachment 450641
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=450641&action=review
> > > Source/WebKit/ChangeLog:13 > > * WebProcess/cocoa/UserMediaCaptureManager.cpp: > > > > +2022-02-01 Youenn Fablet <
youenn@apple.com
> > > This doesn't look right
Right, will fix.
> > Source/WebKit/GPUProcess/webrtc/RemoteMediaRecorder.cpp:95 > > + if (!pixelBuffer) > > + return; > > Is it worth logging an error message? > > > Source/WebKit/WebProcess/GPU/webrtc/MediaRecorderPrivate.cpp:110 > > + if (!copySharedVideoFrame(remoteSample->imageBuffer())) > > + return; > > Ditto
It is worth, the issue is that it might log this 30 fps per second which is a lot. I'll file a bug to add reasonable logging at reader/writer level.
youenn fablet
Comment 5
2022-02-03 01:40:38 PST
I filed
https://bugs.webkit.org/show_bug.cgi?id=236066
youenn fablet
Comment 6
2022-02-03 01:41:26 PST
Created
attachment 450749
[details]
Patch for landing
EWS
Comment 7
2022-02-03 06:32:28 PST
Committed
r289050
(
246757@main
): <
https://commits.webkit.org/246757@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 450749
[details]
.
Radar WebKit Bug Importer
Comment 8
2022-02-03 06:33:17 PST
<
rdar://problem/88432554
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug